Cat monitor icon.

--- a/Software/Monitor/index.html
+++ b/Software/Monitor/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monitor</title>
+    <link rel="icon" href="Icons8-Ios7-Animals-Cat.ico" />
 </head>
 <body>
     <input type="text" id="sas"/>
